2009-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c, coders/pnm.c: Fix several race conditions
	reported by Julian Seward.
	(OpenCache): Restore conservative pre-allocation of pixel indexes
	since a glitch was encountered that needs to be resolved.

	* magick/{channel.c,compare.c,constitute.c,decorate.c,effect.c,fx.c,
	image.c,operator.c,pixel_iterator.c,render.c,resize.c,segment.c,
	shear.c,transform.c}: Use explicit OpenMP critical sections to
	avoid possible cross-contention.

	* coders/{dpx.c, pnm.c} Use explicit OpenMP critical sections to
	avoid possible cross-contention.

2009-01-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Remove conservative
	pre-allocation of pixel indexes.

2009-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Reduce the amount of text on the front page.

2009-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: The module .la files need to be
	installed as part of the base install or else the modules will
	fail to load.

2009-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Fix assertion thrown for DIB files
	with negative image height values.

2009-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix assertion thrown for BMP files
	with negative image height values.  Resolves SF issue 2523536 "bug
	in bmp coder".

	* Makefile.am: Don't install Magick++ headers if Magick++ is
	disabled.

	* GraphicsMagick.spec.in: --enable-lzw option is no longer used.

2009-01-17  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: More robust fits parsing.

2009-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated news.

2009-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (XYZTransformPackets): Fix arithmetic
	overflow problem noticed for Q32 build when using GCC on