@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020090131"
+#define public MagickPackageVersionAddendum ".020090203"
 #define public MagickPackageReleaseDate "unreleased"
