@@ -1607,7 +1607,11 @@ static Image *ReadTIFFImage(const ImageInfo *image_info,
 
       if ((photometric == PHOTOMETRIC_PALETTE) ||
           ((photometric == PHOTOMETRIC_MINISWHITE ||
-            photometric == PHOTOMETRIC_MINISBLACK) && (1 == bits_per_sample)))
+            photometric == PHOTOMETRIC_MINISBLACK) &&
+	   (1 == bits_per_sample) &&
+	   (image_info->type != TrueColorType) &&
+	   (image_info->type != TrueColorMatteType))
+	  )
         {
           /*
             Palette image
