@@ -1,3 +1,10 @@
+2009-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/tiff.c (ReadTIFFImage): Allow the user to force the
+	returned image to be TrueColor type for min-is-white and
+	min-is-black TIFF files.  Previous to this, bilevel TIFF files
+	were always returned as PseudoClass.
+
 2009-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/pixel_cache.c, coders/pnm.c: Fix several race conditions
